# mosk-mcp

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  NOTES.md  README.md  TODO.md  pyproject.toml
scripts/: dev-run.sh  docker-build.sh  docker-run.sh
src/mosk_mcp/: __init__.py  __main__.py  _version.py  cli.py  url_validation.py
src/mosk_mcp/adapters/: __init__.py  ceph.py  kubernetes.py  openstack.py
src/mosk_mcp/adapters/crd/: __init__.py  baremetal.py  base.py  cluster_maintenance.py  cluster_update.py  graceful_reboot.py  ipam.py  l2template.py  machine.py  maintenance.py  miraceph.py  osdpl.py
src/mosk_mcp/adapters/stacklight/: __init__.py  core.py  manager.py  response_models.py
src/mosk_mcp/adapters/utils/: __init__.py  pod_exec.py
src/mosk_mcp/auth/: __init__.py  crq.py  device_flow.py  keycloak_client.py  rbac.py  session.py  types.py
src/mosk_mcp/cluster/: __init__.py  config.py  manager.py  models.py
src/mosk_mcp/core/: __init__.py  config.py  connection.py  exceptions.py  server.py  server_context.py  validation.py
src/mosk_mcp/infrastructure/: __init__.py  cache.py  circuit_breaker.py  ratelimit.py  shutdown.py  version_checker.py
src/mosk_mcp/observability/: __init__.py  audit.py  health.py  logging.py  metrics.py  tool_logging_middleware.py
src/mosk_mcp/privacy/: __init__.py  middleware.py  redactor.py
src/mosk_mcp/registration/: __init__.py  models.py  tool_groups.py  utils.py
src/mosk_mcp/registration/tools/: __init__.py  auth.py  ceph_operations.py  cluster.py  cluster_health.py  messaging_operations.py  node_lifecycle.py  operations_visibility.py  template_generation.py  troubleshooting.py  validation.py
src/mosk_mcp/tools/: __init__.py
src/mosk_mcp/tools/auth/: __init__.py  device_flow_login.py  logout.py  models.py  session_status.py
src/mosk_mcp/tools/ceph_operations/: __init__.py  get_ceph_capacity.py  get_ceph_status.py  get_osd_details.py  get_pg_status.py  get_recovery_status.py  list_osds.py  models.py  predict_capacity.py
src/mosk_mcp/tools/cluster/: __init__.py  add_cluster.py  current_cluster.py  list_clusters.py  lock_cluster.py  switch_cluster.py
src/mosk_mcp/tools/cluster_health/: __init__.py  get_alert_details.py  get_ceph_health.py  get_kubernetes_health.py  get_mosk_cluster_health.py  get_openstack_health.py  get_resource_utilization.py  list_active_alerts.py  models.py  run_preflight_check.py
src/mosk_mcp/tools/common/: __init__.py  audit.py  constants.py  enums.py  errors.py  health.py  kubernetes.py  models.py  parsers.py  recommendations.py  scoring.py
src/mosk_mcp/tools/messaging_operations/: __init__.py  diagnose_rabbitmq_issue.py  get_rabbitmq_connections.py  get_rabbitmq_status.py  list_rabbitmq_queues.py  models.py  rabbitmq_client.py
src/mosk_mcp/tools/node_lifecycle/: __init__.py  apply_machine.py  create_maintenance_request.py  get_ipamhost_details.py  get_machine_details.py  get_migration_status.py  get_node_provision_progress.py  get_node_readiness.py  list_bmh.py  list_bmhp.py  list_l2templates.py  list_machines.py
src/mosk_mcp/tools/operations_visibility/: __init__.py  apply_cluster_release_patch.py  apply_osdpl_patch.py  commence_cluster_upgrade.py  get_component_versions.py  get_migration_eta.py  get_mosk_platform_status.py  get_mosk_platform_upgrade_progress.py  get_node_conditions.py  get_openstack_deployment_status.py  get_openstack_upgrade_progress.py  get_rollout_status.py  list_available_releases.py  list_live_migrations.py  list_maintenance_requests.py  models.py  monitor_operation.py
src/mosk_mcp/tools/template_generation/: __init__.py  base.py  bmhi.py  bmhp.py  l2template.py  machine.py  node_templates.py  osdpl.py  validator.py
src/mosk_mcp/tools/troubleshooting/: __init__.py  correlate_events.py  create_diagnostic_bundle.py  diagnose_network_issue.py  diagnose_storage_issue.py  diagnose_vm_failure.py  explain_alert.py  get_known_issues.py  get_pod_logs.py  known_issues.py  models.py  query_logs.py  suggest_resolution.py  trace_request.py
src/mosk_mcp/tools/validation/: __init__.py  check_service_availability.py  run_mosk_platform_validation.py  run_post_upgrade_validation.py  run_smoke_test.py
tests/: __init__.py  conftest.py  test_audit.py  test_auth.py  test_config.py  test_crq.py  test_exceptions.py  test_kubernetes_adapter.py  test_logging.py  test_mcp_tools_integration.py  test_ratelimit.py  test_rbac.py  test_server.py  test_shutdown.py  test_template_generation.py
tests/integration/: __init__.py  conftest.py  test_ceph_operations.py  test_cluster_health.py  test_node_lifecycle.py  test_operations_visibility.py
tests/unit/: test_cli.py  test_health.py  test_imports.py  test_metrics.py
tests/unit/adapters/: test_ceph.py  test_crd.py  test_kubernetes.py  test_openstack.py  test_pod_exec.py  test_stacklight_manager.py
tests/unit/auth/: test_device_flow.py  test_keycloak_client.py  test_session.py
tests/unit/cluster/: __init__.py  test_cluster_config.py
tests/unit/core/: test_config.py  test_server_context.py
tests/unit/infrastructure/: test_cache.py  test_circuit_breaker.py  test_ratelimit.py  test_shutdown.py  test_version_checker.py
tests/unit/registration/: test_tool_groups.py
tests/unit/tools/: conftest.py  test_auth.py  test_ceph_operations.py  test_cluster.py  test_cluster_health.py  test_common.py  test_messaging_operations.py  test_monitor_operation.py  test_monitors.py  test_operations_visibility.py  test_template_generation.py  test_troubleshooting.py  test_validation.py
tests/unit/tools/ceph_operations/: __init__.py  test_get_ceph_capacity.py  test_get_ceph_status.py  test_get_osd_details.py  test_get_pg_status.py  test_get_recovery_status.py  test_list_osds.py  test_models.py  test_predict_capacity.py
tests/unit/tools/cluster_health/: __init__.py  test_get_alert_details.py  test_get_ceph_health.py  test_get_kubernetes_health.py  test_get_openstack_health.py  test_get_resource_utilization.py  test_list_active_alerts.py
tests/unit/tools/common/: __init__.py  test_errors.py  test_parsers.py
(+53 files in other folders)
