[project]
name = "mosk-mcp"
version = "0.1.0"
description = "MCP Server for Mirantis OpenStack for Kubernetes (MOSK) operations"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "MOSK Team", email = "mosk-team@example.com" }
]
keywords = [
    "mcp",
    "openstack",
    "kubernetes",
    "mosk",
    "mirantis",
    "automation",
    "infrastructure",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Clustering",
    "Typing :: Typed",
]

dependencies = [
    "fastmcp>=2.0.0",
    "kr8s>=0.17.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=24.0.0",
    "httpx>=0.27.0",
    "anyio>=4.0.0",
    "PyYAML>=6.0",
    "python-json-logger>=2.0.0",
    "aiofiles>=24.0.0",
    # HTTP transport and observability
    "starlette>=0.37.0",
    "uvicorn>=0.29.0",
    "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
    "pytest-timeout>=2.2.0",
    "pytest-ruff>=0.4.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.5.0",
    "types-PyYAML>=6.0.0",
    "types-aiofiles>=24.0.0",
]

e2e = [
    "pytest-kind>=22.11.0",
]

all = [
    "mosk-mcp[dev,e2e]",
]

[project.scripts]
mosk-mcp = "mosk_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/mirantis/mosk-mcp"
Documentation = "https://github.com/mirantis/mosk-mcp#readme"
Repository = "https://github.com/mirantis/mosk-mcp"
Issues = "https://github.com/mirantis/mosk-mcp/issues"

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mosk_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

# pytest configuration
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "-v",
    "--ruff",
    "--ruff-format",
]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (may require external services)",
    "e2e: End-to-end tests (require kind cluster)",
    "slow: Slow tests",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    # Python 3.14 stricter coroutine cleanup causes issues with AsyncMock
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

# Coverage configuration
[tool.coverage.run]
source = ["src/mosk_mcp"]
branch = true
parallel = true
omit = [
    "*/__init__.py",
    "*/tests/*",
]

[tool.coverage.paths]
source = [
    "src/mosk_mcp",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]
fail_under = 80
show_missing = true
skip_covered = true

# mypy configuration
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_no_return = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_equality = true
extra_checks = true
show_error_codes = true
show_column_numbers = true
pretty = true
plugins = ["pydantic.mypy"]

# Pydantic mypy plugin configuration
[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# Per-module overrides for external libraries without stubs
[[tool.mypy.overrides]]
module = [
    "kr8s.*",
    "fastmcp.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_decorators = false

# Ruff configuration
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "S",      # flake8-bandit (security)
    "T20",    # flake8-print
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # Ruff-specific rules
]
ignore = [
    # Security false positives - these are NOT passwords/secrets
    "S105",   # Possible hardcoded password (false positive for status enums like PASS="pass")
    "S107",   # Possible hardcoded password in function default (false positive for OAuth URNs)
    "S311",   # Standard pseudo-random generators - acceptable for jitter/delays
    # Network binding - intentional for container deployments
    "S104",   # Possible binding to all interfaces (intentional for Docker/K8s)
    # Exception handling
    "S110",   # try-except-pass - acceptable in shutdown/cleanup paths
    "S112",   # try-except-continue - acceptable when iterating alternatives
    # Path handling
    "S108",   # Probable insecure usage of temp file - acceptable for pattern matching
    # Type checking imports
    "TCH001", # Move import into TYPE_CHECKING block - some needed at runtime
    "TCH002", # Move third-party import into TYPE_CHECKING block - some needed at runtime
    "TCH003", # Move standard library import into TYPE_CHECKING block - some needed at runtime
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S106"]  # Allow assert and hardcoded passwords in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
